@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
         targeted short read sequencing 
-Version: 1.5.16
-Date: 2016-12-10
+Version: 1.5.17
+Date: 2016-12-11
 Author: Markus Riester
 Maintainer: Markus Riester <markus.riester@novartis.com>
 Description: This package estimates tumor purity, copy number, loss of
@@ -14,9 +14,10 @@ Description: This package estimates tumor purity, copy number, loss of
 Depends: R (>= 3.2), DNAcopy, VariantAnnotation (>= 1.14.1)
 Imports: GenomicRanges (>= 1.20.3), IRanges (>= 2.2.1), RColorBrewer,
         S4Vectors, data.table, grDevices, graphics, stats, utils,
-        SummarizedExperiment, GenomeInfoDb, Rsamtools, Biostrings
+        SummarizedExperiment, GenomeInfoDb, Rsamtools, Biostrings,
+        rtracklayer
 Suggests: PSCBS, RUnit, BiocStyle, BiocGenerics, knitr, getopt,
-        rtracklayer, TxDb.Hsapiens.UCSC.hg19.knownGene, org.Hs.eg.db
+        TxDb.Hsapiens.UCSC.hg19.knownGene, org.Hs.eg.db
 VignetteBuilder: knitr
 License: Artistic-2.0
 biocViews: CopyNumberVariation, Software, Sequencing,
