@@ -50,6 +50,7 @@ importFrom("grDevices", "colorRampPalette", "dev.off", "png", "adjustcolor")
 importFrom("graphics", "abline", "axis", "boxplot", "contour", "hist","image", 
     "legend", "lines", "par", "plot", "text", "mtext", "polygon","points",
     "rect", "strwidth", "symbols", "barplot")
+importFrom("rtracklayer", "import")
 importFrom("stats", "C", "complete.cases", "dbeta", "dist", "dnorm", "dunif", 
     "loess", "pbeta", "prcomp", "predict", "runif", "t.test", "weighted.mean", 
     "dbinom", "fisher.test", "hclust", "cutree", "filter")
