@@ -174,6 +174,21 @@ calculateGCContentByInterval(interval.file, reference.file,
     output.file = "ex2_gc_file.txt")
 @
 
+\Rfunction{calculateGCContentByInterval} can also be used 
+to create an interval file from a BED file for example:
+
+<<examplegc2>>=
+bed.file <- system.file("extdata", "ex2_intervals.bed", 
+        package = "PureCN", mustWork = TRUE)
+
+intervals <- import(bed.file)
+
+calculateGCContentByInterval(intervals, reference.file, 
+    output.file = "ex2_gc_file.txt")
+@
+
+
+
 \subsection{Third-party segmentation tools}
 
 \Biocpkg{PureCN} integrates well with existing copy number pipelines. Instead of
